# skip

./: Cargo.toml  Dockerfile  Makefile  README.md  bacon.toml  compose.yaml  prod.env
src/: main.rs
src/error/: mod.rs  speed.rs
src/speed/: client.rs  handlers.rs  mod.rs  types.rs
src/speed/client/: aadhar.rs  mobile.rs  mod.rs  namedob.rs
src/speed/types/: aadhar.rs  mobile.rs  mod.rs  namedob.rs
